--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,9 @@
+set -eu
 use flake
+# direnv.toml key: envrc/v1
+if ! [[ -f .venv ]]; then
+  echo "Creating virtual environment..."
+  uv venv .venv
+  echo ".venv" >> .gitignore
+fi
+
