use uv to create venv using nix/store/python

--- a/.envrc
+++ b/.envrc
@@ -1,9 +1,9 @@
-set -eu
+# set -eu
 use flake
-# direnv.toml key: envrc/v1
-if ! [[ -f .venv ]]; then
-  echo "Creating virtual environment..."
-  uv venv .venv
-  echo ".venv" >> .gitignore
-fi
+# # direnv.toml key: envrc/v1
+# if ! [[ -f .venv ]]; then
+#   echo "Creating virtual environment..."
+#   uv venv .venv
+#   echo ".venv" >> .gitignore
+# fi
 
